[CALCULATOR-34] calculator z-index fix

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -49,6 +49,7 @@ body {
     background: $gray-2;
     width: 320px;
     position: absolute;
+    z-index: 1;
 
     .display {
       display: flex;
